...
        }
    }

    var title: String {
        switch self {
        case .ahead: "About 25 minutes"
        case .onTheDot: "About 30 minutes"
        case .quarterOver: "35 to 40 minutes"
        case .halfOver: "About 45 minutes"
        case .doubleOver: "An hour or more"
        }
    }

...
